fix: корректно обрабатывать ошибки и остановку SnapshotProcessor